Fixed overflow, added snowfall on mobile

--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ html, body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 body {
@@ -25,6 +26,9 @@ body {
     background-color: #000;
 }
 
+navbar {
+
+}
 
 footer {
     position: relative;
